G1: assert(obj->is_oop_or_null(true )) failed: Error #

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs21
    • Affects Version/s: hs21
    • Component/s: hotspot
    • None
    • gc
    • b14
    • generic
    • generic
    • Verified

        Saw this failure during 20110430 nightly testing.

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/tmp/jprt/P1/B/192840.iv159533/source/src/share/vm/gc_implementation/g1/concurrentMark.cpp:3409), pid=19698, tid=33
        # assert(obj->is_oop_or_null(true )) failed: Error

              Assignee:
              John Cuthbertson
              Reporter:
              Jon Masamitsu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: